# Mkala

./: CMakeLists.txt  README.md  library.cpp  main.cpp
include/: library.h  user.h
src/: book.cpp  book.h  user.cpp
tests/: CMakeLists.txt  test_library.cpp
